add dao junit demo